      current file will be copied to the clipboard as well.

    - The currently opened file or archive can now be deleted using
      File -> Delete, or by pressing F8.

    - Added an option to use the first page of an archive as application
      icon instead of the standard MComix icon. (inspired by Alexandr
      Domrachev)

    - Added the following new command line switches:
      -m           Manga mode
      -s           Slideshow
      -d           Double-page mode
      -B, -W, -H   Fit best/width/height, respectively.
      (suggested by Anonymous on the Comix tracker, adapted by Alan Horkan)

    - The following preference items have been removed: 

      "Automated crash recovery": No longer necessary.
      "Show page numbers": Enabled by default.
      "Avoid unintentional page flips": Enabled by default.
      "Stretch small images": Now in Menu->View->Stretch small images.
      "Default zoom mode": Last setting is remembered instead.

    - Updated Japanese translation. (by Keita Haga)

    - Updated French translation. (by Joseph M. Sleiman)

MComix 0.91

    - Fixed excessive memory consumption due to cached pixmaps not being
      properly evicted.

    - Fixed certain wait conditions that prevented MComix from exiting
      on Win32.

    - Fixed "Remove from the library" deleting the actual book instead of
      its library thumbnail.

    - The "Go to page" dialog now shows thumbnails when they are available, 
      not only after all thumbnails have been loaded. Additionally,
      some usability improvements have been done to the dialog, such as
      instantly updating the thumbnail when editing the page box, and setting
      focus to the page box when the dialog is opened.

    - When passing more than one file to MComix at startup, only those files
      will be opened. This differs from the traditional behavior, where
      MComix would only consider the first file and open all remaining
      files in the same directory.